<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/word_detail_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_words_bottom_sheet"
    tools:layout_gravity="bottom">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:lineHeight="22dp"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="?colorOnSurface"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/image_speech"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drag_handle"
        tools:text="consciously" />

    <TextView
        android:id="@+id/text_ipa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="?colorOnSurface"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/text_word"
        app:layout_constraintTop_toBottomOf="@id/text_word"
        tools:text="/ˈkɑːnʃəsli/" />

    <ImageView
        android:id="@+id/image_speech"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_volume"
        app:layout_constraintBottom_toBottomOf="@id/text_ipa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_word"
        app:layout_constraintVertical_bias="0.3"
        app:tint="?colorOnSurface" />

    <TextView
        android:id="@+id/text_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_pos_detail"
        android:paddingHorizontal="12dp"
        android:paddingVertical="2dp"
        android:textColor="?colorOnSurface"
        app:layout_constraintStart_toStartOf="@id/text_word"
        app:layout_constraintTop_toBottomOf="@id/text_ipa"
        tools:text="adv" />

    <TextView
        android:id="@+id/text_meaning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textColor="?colorOnSurface"
        app:layout_constraintBaseline_toBaselineOf="@id/text_pos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_pos"
        tools:text="có ý thức; sự sáng suốt; cái ảnh đã nói lên tất cả." />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?colorOutlineVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_meaning" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_delete"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/image_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1"
                    app:tint="?colorOnSurfaceVariant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/delete"
                    android:textColor="?colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/image_delete"
                    app:layout_constraintStart_toStartOf="@id/image_delete"
                    app:layout_constraintTop_toBottomOf="@id/image_delete" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_edit"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/image_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1"
                    app:tint="?colorOnSurfaceVariant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/edit"
                    android:textColor="?colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/image_edit"
                    app:layout_constraintStart_toStartOf="@id/image_edit"
                    app:layout_constraintTop_toBottomOf="@id/image_edit" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_remind"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/image_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_alarm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1"
                    app:tint="?colorOnSurfaceVariant" />

                <TextView
                    android:id="@+id/text_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/pref_title_remind"
                    android:textAlignment="center"
                    android:textColor="?colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/image_remind"
                    app:layout_constraintStart_toStartOf="@id/image_remind"
                    app:layout_constraintTop_toBottomOf="@id/image_remind" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>