<resources>
    <string name="app_name">Word Notes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="words">Words</string>
    <string name="ipa">IPA</string>
    <string name="meaning">Meaning</string>
    <string name="add_new_word_successfully">Add new word successfully</string>
    <string name="update_word_successfully">Update word successfully</string>
    <string name="word_must_not_be_empty">Word must not be empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
...
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="sent">Sent</string>
    <string name="learning">Learning</string>
    <string name="choose_a_mode">Choose a mode</string>
    <string name="select_one_of_the_modes_below_to_start">Select one of the modes below to start</string>
    <string name="mix">Mix</string>
    <string name="word">Word</string>
    <string name="toggle_remind">Toggle remind</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
...
